// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SystemSettings editor render 1`] = `
<div>
  <section
    style="display: flex; position: relative; text-align: initial; width: 960px; height: 500px;"
  >
    <div
      style="display: flex; height: 100%; width: 100%; justify-content: center; align-items: center;"
    >
      Loading...
    </div>
    <div
      style="width: 100%; display: none;"
    />
  </section>
</div>
`;

exports[`SystemSettings render with fetchSystemSetting 1`] = `
<div>
  <div
    class=""
  >
    <form>
      <div
        class="formItem"
      >
        <div
          class="ae af"
          data-baseweb="form-control-container"
        >
          <section
            style="display: flex; position: relative; text-align: initial; width: 960px; height: 500px;"
          >
            <div
              style="display: flex; height: 100%; width: 100%; justify-content: center; align-items: center;"
            >
              Loading...
            </div>
            <div
              style="width: 100%; display: none;"
            />
          </section>
        </div>
      </div>
      <div
        class="formItem"
      >
        <div
          class="ae af"
          data-baseweb="form-control-container"
        >
          <div
            class="buttonGroup-0-2-1"
            value="[object Object]"
          >
            <button
              class="ag ah ai aj ak al am an ao ap aq ar as at au av aw ax ay az b0 b1 b2 b3 b4 b5 b6 b7 b8 b9 ba bb bc bd be bf bg bh bi bj bk bl bm"
              data-baseweb="button"
              type="button"
            >
              Reset
            </button>
            <button
              class="ag ah ai aj ak al am an ao ap aq ar as at au av aw ax ay az b0 b1 b2 b3 b4 b5 b6 b7 b8 b9 ba bb bc bd be bf bg bh bi bn bo bp bq"
              data-baseweb="button"
            >
              Update
            </button>
            <div
              style="flex-grow: 1;"
            />
          </div>
        </div>
      </div>
    </form>
  </div>
  <div
    class=""
  />
</div>
`;
